# peachili

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  a.out  aarch64_test.sh  error_test.sh  hir.dot  integration_test.py  llvm_test.sh  setup.sh  test.sh  x64_test.sh
src/compiler/: CMakeLists.txt  Makefile  agc.c  alloc_frame.c  codegen.c  common.rs  compiler.c  compiler_main.rs  lex.c  main.rs  mod.rs  parse.c  sema.c  token.c  type_check.c  util.c
src/compiler/arch/: x64.rs  x86_64.rs
src/compiler/arch/aarch64/: codegen.rs  type_resolve.rs
src/compiler/arch/aarch64/ast/: expression.rs  function.rs  main.rs  root.rs  statement.rs
src/compiler/arch/x64/: ast.rs  codegen.rs  type_resolve.rs  x64_ast.rs
src/compiler/arch/x64/ast/: expression.rs  function.rs  main.rs  peachili_type.rs  root.rs  statement.rs  type_resolve.rs
src/compiler/arch/x64/x64_ast/: function.rs  main.rs  peachili_type.rs  statement.rs
src/compiler/arch/x86_64/: codegen.rs  type_resolve.rs
src/compiler/arch/x86_64/ast/: constant.rs  expression.rs  function.rs  main.rs  root.rs  statement.rs
src/compiler/bundler/: bundler_main.c  parse.c
src/compiler/bundler/include/: bundler.h
src/compiler/common/: frontend.rs  hir.rs
src/compiler/common/frontend/: main.rs  pass.rs  types.rs
src/compiler/common/frontend/pass/: parser.rs  tld_collector.rs  typing.rs
src/compiler/common/frontend/pass/parser/: expression.rs  main.rs  nom_wrapper.rs  parser.rs  primitive.rs  statement.rs
src/compiler/common/frontend/pass/typing/: ast_lower.rs  type_resolve.rs
src/compiler/common/frontend/types/: allocator.rs  ast.rs  frame_object.rs  peachili_type.rs  typed_ast.rs
src/compiler/common/frontend/types/ast/: ast_root.rs  (+4 more)
src/compiler/common/hir/: program.rs
src/compiler/general/: frontend.rs  mod.rs
src/compiler/general/pass/: mod.rs
src/compiler/general/pass/parse/: expression.rs  main.rs  mod.rs  statement.rs
src/compiler/general/pass/resolve_tld/: main.rs
src/compiler/general/pass/tokenize/: main.rs  mod.rs  test.rs
src/compiler/general/pass/type_check/: main.rs
src/compiler/general/pass/type_resolve/: main.rs
src/compiler/general/resource/: const_value.rs  lexer.rs  mod.rs  parser.rs  ptype.rs  tld.rs  token.rs  type_system.rs
src/compiler/general/resource/ast/: expression.rs  pfunction.rs  pvariable.rs  root.rs  statement.rs
src/compiler/include/: token.h  util.h
src/compiler/llvm_compiler/: compiler_main.rs  mod.rs
src/compiler/llvm_compiler/pass/: codegen.rs  mod.rs
src/compiler/pass/: alloc_frame.rs  mod.rs  parse.rs  tokenize.rs  type_check.rs
src/compiler/pass/alloc_frame/: main.rs  mod.rs
src/compiler/pass/codegen/: x64.rs
src/compiler/pass/parse/: expression.rs  main.rs  statement.rs
src/compiler/pass/resolve_tld/: main.rs  mod.rs
src/compiler/pass/tokenize/: main.rs  test.rs
src/compiler/pass/type_check/: main.rs
src/compiler/pass/type_resolve/: main.rs
src/compiler/resource/: CMakeLists.txt  agtype.c  ast.c  ast.rs  lexer.rs  mod.rs  module.c  parser.rs  ptype.rs  tld.rs  token.c  token.rs  variable.c  vector.c
src/compiler/resource/ast/: expression.rs  mod.rs  pfunction.rs  pvariable.rs  root.rs  statement.rs
src/compiler/resource/include/: agtype.h  ast.h  module.h  token.h  variable.h  vector.h
src/compiler/x64_compiler/: compiler_main.rs
src/compiler/x64_compiler/pass/: mod.rs
src/compiler/x64_compiler/pass/alloc_frame/: main.rs
src/compiler/x64_compiler/pass/codegen/: main.rs
(+308 files in other folders)
