[package]
name = "peachili"
version = "0.1.0"
authors = ["Drumato <drumato43@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
yaml-rust = "0.4"
elf-utilities = "0.1.73"
indexmap = "1.3.2"
colored = "1.9.3"
asmpeach = "0.1.46"
pld = "0.1.45"
lazy_static = "1.4.0"

# llvm-scratch = "0.1.15"
id-arena = "2.2.1"
