[package]
name = "peachili"
version = "0.1.0"
authors = ["Drumato <drumato43@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
elf-utilities = "0.1.73"
indexmap = "1.3.2"
colored = "1.9.3"
asmpeach = "0.1.46"
pld = "0.1.45"

# llvm-scratch = "0.1.15"
typed-arena = "2.0.1"
nom = "6.0.0"
fxhash = "0.2.1"