[package]
name = "peachili"
version = "0.1.0"
authors = ["Drumato <drumato43@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "1.9.3"

# llvm-scratch = "0.1.15"
typed-arena = "2.0.1"
nom = "6.0.0"
thiserror = "1.0.22"
